# tournament.hs

./: .travis.yml  History.md  Readme.md  Test.hs  Tournament.cabal  package.cabal  test.hs  tournament.cabal  tournament.hs
Game/: Tournament.hs
tests/: Properties.hs  properties.hs
