Name          : Tournament
Version       : 0.0.1
Synopsis      : Tournament related algorithms
Homepage      : http://github.com/clux/tournament.hs
Description   :

  Tournament is a pure library which generates tournaments, groups
  and rounds of various forms using a variety of different possible rules.

License       : GPL-3
License-file  : LICENSE
Author        : Eirik <clux> Albrigtsen
Copyright     : 2012, Eirik Albrigtsen
Maintainer    : analsandblaster@gmail.com
Category      : Game
Bug-reports   : http://github.com/clux/tournament.hs/issues

Build-type    : Simple
Stability     : experimental
tested-with   : GHC == 7.0.4
Cabal-version : >= 1.2

Extra-source-files:
  Readme.md
  tests/Property.hs
--------------------------------------------------------------------------------
Flag tests
  Description: Build and install the test executable
  Default: False
  Manual: True

library
  hs-source-dirs  : src
  exposed-modules : Game.Tournament
  build-depends   : base    >= 4 && < 5
  ghc-options     : -Wall

-------------------------------------------------------------------------------
executable tournament-test
  main-is         : Test/Property.hs
  build-depends   :
        base        >= 4.0 && < 5.0
      , QuickCheck  >= 2.4 && < 2.5
  ghc-options     : -Wall
