Name          : Tournament
Version       : 0.0.1
Synopsis      : Tournament related algorithms
Homepage      : http://github.com/clux/tournament.hs
Description   :

  Tournament is a pure library which generates tournaments, groups
  and rounds of various forms using a variety of different rulesets.

License       : GPL-3
License-file  : LICENSE
Author        : Eirik <clux> Albrigtsen
Copyright     : 2012, Eirik Albrigtsen
Maintainer    : analsandblaster@gmail.com
Category      : Game
Bug-reports   : http://github.com/clux/tournament.hs/issues

Build-type    : Simple
Stability     : experimental
tested-with   : GHC == 7.0.4
Cabal-version : >= 1.2

Extra-source-files:
  Readme.md
  tests/Property.hs

--------------------------------------------------------------------------------

library
  hs-source-dirs  : .
  exposed-modules : Game.Tournament
  build-depends   : base >= 4 && < 5
  ghc-options     : -W

-------------------------------------------------------------------------------
Test-Suite test-tournament
  main-is         : Test.hs
  type            : exitcode-stdio-1.0
  other-modules   : Game.Tournament
  build-depends   :
        base                        >= 4.0 && < 5.0
      , QuickCheck                  == 2.4.*
      , test-framework-quickcheck2  == 0.2.*
      , test-framework              == 0.6.*
  ghc-options     : -W
